sites/site2/traefik/manifest/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-tls-dashboard
  namespace: traefik
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`dashboard.traefik`)
    kind: Rule
    middlewares:
    - name: auth
    services:
    - name: api@internal
      kind: TraefikService
  tls:
    secretName: traefik-cert
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: traefik
spec:
  basicAuth:
    secret: authsecret
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-tls-bitwarden
  namespace: bitwarden
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`bitwarden.traefik`)
    kind: Rule
    services:
    - name: bitwarden
      port: 80
      namespace: bitwarden
  tls:
    secretName: traefik-cert
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-tls-acmedns
  namespace: acme-dns
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`dns.traefik`)
    kind: Rule
    services:
    - name: acmedns
      port: 80
      namespace: acme-dns
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: local-ipwhitelist
spec:
  ipWhiteList:
    sourceRange:
    - 10.0.0.0/8
    - 172.16.0.0/12
    - 192.168.0.0/16
